--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.2",
+    "react-toastify": "^9.1.3",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
